--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "jazeee.com-3.0.0",
-  "version": "3.0.0",
   "description": "jazeee.com source code",
   "main": "index.js",
   "repository": "git@github.com:jazeee/jazeee.com-3.0.0.git",
-  "author": "jazeee@gmail.com",
   "license": "Apache-2.0",
-  "private": false
+  "private": false,
+  "packageManager": "yarn@3.4.1"
 }
