--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "repository": "git@github.com:jazeee/jazeee.com-3.0.0.git",
   "license": "Apache-2.0",
   "dependencies": {
+    "@emotion/react": "11.10.6",
     "gatsby": "5.7.0",
+    "gatsby-plugin-catch-links": "5.7.0",
     "gatsby-plugin-image": "3.7.0",
+    "gatsby-plugin-lodash": "6.7.0",
     "gatsby-plugin-manifest": "5.7.0",
+    "gatsby-plugin-material-ui": "next",
+    "gatsby-plugin-react-helmet": "6.7.0",
     "gatsby-plugin-sharp": "5.7.0",
     "gatsby-source-filesystem": "5.7.0",
     "gatsby-transformer-sharp": "5.7.0",
+    "install": "0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
