--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.11.11",
+    "@mui/material": "5.11.11",
     "gatsby": "5.7.0",
     "gatsby-plugin-catch-links": "5.7.0",
     "gatsby-plugin-image": "3.7.0",
@@ -16,6 +19,7 @@
     "gatsby-source-filesystem": "5.7.0",
     "gatsby-transformer-sharp": "5.7.0",
     "install": "0.13.0",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
