--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,7 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
-defaultSemverRangePrefix: ''
+defaultSemverRangePrefix: ""
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
+yarnPath: .yarn/releases/yarn-berry.cjs
