--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "esnext",
+    "target": "ESNext",
     "lib": [
       "dom",
-      "esnext"
+      "ESNext"
     ],
+    "sourceMap": true,
     "jsx": "react",
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "node",
+    "baseUrl": "src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "noErrorTruncation": true,
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": [
+      "src/**/*"
+    ],
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "./src/**/*",
