--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "gatsby-transformer-sharp": "5.7.0",
     "install": "0.13.0",
     "lodash": "4.17.21",
+    "plotly.js": "2.18.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-plotly.js": "2.6.0"
   },
   "devDependencies": {
     "@types/lodash": "4.14.191",
+    "@types/plotly.js": "^2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-plotly.js": "^2",
     "prettier": "2.8.4"
   },
   "keywords": [
