--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   },
   "devDependencies": {
     "@types/lodash": "4.14.191",
-    "@types/plotly.js": "^2",
+    "@types/plotly.js": "2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/react-plotly.js": "^2",
-    "prettier": "2.8.4"
+    "@types/react-plotly.js": "2",
+    "prettier": "2.8.4",
+    "typescript": "4.9.5"
   },
   "keywords": [
     "jazeee.com"
@@ -42,7 +43,8 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "tscheck": "tsc --noEmit"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
