--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
-  "arrowParens": "avoid",
-  "semi": false
+  "printWidth": 100,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
