--- a/.gitignore
+++ b/.gitignore
@@ -20,32 +20,14 @@ coverage
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
+build
 
-# Bower dependency directory (https://bower.io/)
-bower_components
-
-# node-waf configuration
-.lock-wscript
-
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-
-# Dependency directories
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
-typings/
-
-# Optional npm cache directory
 .npm
 
-# Optional eslint cache
 .eslintcache
-
-# Optional REPL history
 .node_repl_history
 
 # Output of 'npm pack'
@@ -54,17 +36,11 @@ typings/
 # dotenv environment variable files
 .env*
 
-# gatsby files
-.cache/
-public
-
-# Mac files
-.DS_Store
-
 # Yarn
 yarn-error.log
 .pnp/
 .pnp.js
 # Yarn Integrity file
 .yarn-integrity
+
 tsconfig.tsbuildinfo
