--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "ESNext"
     ],
     "sourceMap": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "ESNext",
     "moduleResolution": "node",
     "baseUrl": "src",
@@ -34,5 +34,5 @@
     "./gatsby-config.ts",
     "./plugins/**/*"
   ],
-  "exclude": ['node_modules']
+  "exclude": ["node_modules"]
 }
