--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "./src/**/*"
+    "./src/**/*",
+    "src/images.d.ts"
   ],
   "exclude": ["node_modules"]
 }
