--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "5.11.12",
     "@types/react-helmet-async": "1.0.3",
     "@types/react-router-dom": "5.3.3",
+    "constate": "3.3.2",
     "lodash": "4.17.21",
     "plotly.js": "2.18.2",
     "react": "18.2.0",
