--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
+    "@fontsource/roboto": "4.5.8",
     "@mui/icons-material": "5.11.11",
     "@mui/material": "5.11.12",
     "@types/react-helmet-async": "1.0.3",
