--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,11 +14,11 @@ jobs:
       with:
         node-version: lts/*
     - name: Install dependencies
-      run: npm install -g yarn && yarn
+      run: npm install
     - name: Install Playwright Browsers
-      run: yarn playwright install --with-deps
+      run: npm run playwright install --with-deps
     - name: Run Playwright tests
-      run: yarn playwright test
+      run: npm run playwright test
     - uses: actions/upload-artifact@v4
       if: always()
       with:
