--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,34 @@
 {
   "compilerOptions": {
-    "incremental": true,
-    "target": "ESNext",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
     "lib": [
-      "dom",
-      "ESNext"
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
     ],
-    "sourceMap": true,
-    "jsx": "react-jsx",
     "module": "ESNext",
-    "moduleResolution": "node",
-    "baseUrl": "src",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "baseUrl": "./",
     "skipLibCheck": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "noErrorTruncation": true,
-    "allowSyntheticDefaultImports": true,
-    "typeRoots": [
-      "src/**/*",
-      "node_modules/@types"
-    ],
-    "allowJs": true,
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "jsx": "react-jsx",
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "./src/**/*",
-    "src/images.d.ts"
+    "src"
   ],
-  "exclude": ["node_modules"]
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
