--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,11 +14,11 @@ jobs:
       with:
         node-version: lts/*
     - name: Install dependencies
-      run: npm install
+      run: npm ci
     - name: Install Playwright Browsers
-      run: npm run playwright install --with-deps
+      run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npm run playwright test
+      run: npx playwright test
     - uses: actions/upload-artifact@v4
       if: always()
       with:
