--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
   "name": "jazeee.com-3.0.0",
   "description": "jazeee.com source code",
+  "version": "3.0.0",
   "main": "index.js",
   "repository": "git@github.com:jazeee/jazeee.com-3.0.0.git",
   "license": "Apache-2.0",
+  "type": "module",
   "dependencies": {
-    "@emotion/react": "11.10.6",
-    "@emotion/styled": "11.10.6",
-    "@fontsource/roboto": "4.5.8",
-    "@mui/icons-material": "5.11.11",
-    "@mui/material": "5.11.12",
-    "@types/react-helmet-async": "1.0.3",
-    "@types/react-router-dom": "5.3.3",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@fontsource/roboto": "5.0.13",
+    "@mui/icons-material": "5.15.15",
+    "@mui/material": "5.15.15",
     "constate": "3.3.2",
     "lodash": "4.17.21",
-    "plotly.js": "2.18.2",
+    "plotly.js": "2.32.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "4.0.13",
     "react-helmet-async": "1.3.0",
     "react-plotly.js": "2.6.0",
     "react-router-dom": "6.8.2"
   },
   "devDependencies": {
     "@playwright/test": "1.43.1",
-    "@types/lodash": "4.14.191",
-    "@types/node": "18.15.0",
+    "@types/lodash": "4.17.0",
+    "@types/node": "20.12.7",
     "@types/plotly.js": "2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
     "@types/react-plotly.js": "2",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
-    "eslint": "8.12.0",
+    "@types/react-router-dom": "5.3.3",
+    "@typescript-eslint/eslint-plugin": "7.7.1",
+    "@typescript-eslint/parser": "7.7.1",
+    "@vitejs/plugin-react-swc": "3.6.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.32.2",
-    "prettier": "2.8.4",
-    "react-scripts": "5.0.1",
-    "typescript": "4.9.5"
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.34.1",
+    "prettier": "3.2.5",
+    "typescript": "5.4.5",
+    "vite": "5.2.10"
   },
   "keywords": [
     "jazeee.com"
   ],
   "scripts": {
-    "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
-    "build": "react-scripts build",
-    "test": "DISABLE_ESLINT_PLUGIN=true react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "lint": "eslint",
     "lint:all": "eslint src/**/*.{ts,tsx} e2e/**/*.{ts,tsx}",
     "tscheck": "tsc --noEmit"
   },
-  "packageManager": "yarn@4.0.0-rc.40",
   "browserslist": {
     "production": [
       ">0.2%",
